--- a/app/javascript/flavours/polyam/styles/components/sensitive.scss
+++ b/app/javascript/flavours/polyam/styles/components/sensitive.scss
@@ -8,6 +8,7 @@
   z-index: 100;
 }
 
+// glitch-specific "sensitive" label on displayed images; TODO: remove it?
 .sensitive-marker {
   margin: 0 3px;
   border-radius: 2px;
