--- a/app/javascript/flavours/polyam/styles/components/media.scss
+++ b/app/javascript/flavours/polyam/styles/components/media.scss
@@ -93,7 +93,7 @@
   box-sizing: border-box;
   margin-top: 8px;
   overflow: hidden;
-  border-radius: 4px;
+  border-radius: 8px;
   position: relative;
   width: 100%;
   min-height: 64px;
@@ -110,7 +110,7 @@
   box-sizing: border-box;
   display: block;
   position: relative;
-  border-radius: 4px;
+  border-radius: 8px;
   overflow: hidden;
 
   &--tall {
@@ -195,206 +195,6 @@
   position: absolute;
 }
 
-.video-modal__container {
-  max-width: 100vw;
-  max-height: 100vh;
-}
-
-.audio-modal__container {
-  width: 50vw;
-}
-
-.media-modal {
-  width: 100%;
-  height: 100%;
-  position: relative;
-
-  &__close,
-  &__zoom-button {
-    color: rgba($white, 0.7);
-
-    &:hover,
-    &:focus,
-    &:active {
-      color: $white;
-      background-color: rgba($white, 0.15);
-    }
-
-    &:focus {
-      background-color: rgba($white, 0.3);
-    }
-  }
-}
-
-.media-modal__closer {
-  position: absolute;
-  top: 0;
-  inset-inline-start: 0;
-  inset-inline-end: 0;
-  bottom: 0;
-}
-
-.media-modal__navigation {
-  position: absolute;
-  top: 0;
-  inset-inline-start: 0;
-  inset-inline-end: 0;
-  bottom: 0;
-  pointer-events: none;
-  transition: opacity 0.3s linear;
-  will-change: opacity;
-
-  * {
-    pointer-events: auto;
-  }
-
-  &.media-modal__navigation--hidden {
-    opacity: 0;
-
-    * {
-      pointer-events: none;
-    }
-  }
-}
-
-.media-modal__nav {
-  background: transparent;
-  box-sizing: border-box;
-  border: 0;
-  color: rgba($white, 0.7);
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  font-size: 24px;
-  height: 20vmax;
-  margin: auto 0;
-  padding: 30px 15px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-
-  &:hover,
-  &:focus,
-  &:active {
-    color: $white;
-  }
-}
-
-.media-modal__nav--left {
-  inset-inline-start: 0;
-}
-
-.media-modal__nav--right {
-  inset-inline-end: 0;
-}
-
-.media-modal__overlay {
-  max-width: 600px;
-  position: absolute;
-  inset-inline-start: 0;
-  inset-inline-end: 0;
-  bottom: 0;
-  margin: 0 auto;
-
-  .picture-in-picture__footer {
-    border-radius: 0;
-    background: transparent;
-    padding: 20px 0;
-
-    .icon-button {
-      color: $white;
-
-      &:hover,
-      &:focus,
-      &:active {
-        color: $white;
-        background-color: rgba($white, 0.15);
-      }
-
-      &:focus {
-        background-color: rgba($white, 0.3);
-      }
-
-      &.active {
-        color: $highlight-text-color;
-
-        &:hover,
-        &:focus,
-        &:active {
-          background: rgba($highlight-text-color, 0.15);
-        }
-
-        &:focus {
-          background: rgba($highlight-text-color, 0.3);
-        }
-      }
-
-      &.star-icon.active {
-        color: $gold-star;
-
-        &:hover,
-        &:focus,
-        &:active {
-          background: rgba($gold-star, 0.15);
-        }
-
-        &:focus {
-          background: rgba($gold-star, 0.3);
-        }
-      }
-
-      &.disabled {
-        color: $white;
-        background-color: transparent;
-        cursor: default;
-        opacity: 0.4;
-      }
-    }
-  }
-}
-
-.media-modal__pagination {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.media-modal__page-dot {
-  flex: 0 0 auto;
-  background-color: $white;
-  opacity: 0.4;
-  height: 6px;
-  width: 6px;
-  border-radius: 50%;
-  margin: 0 4px;
-  padding: 0;
-  border: 0;
-  font-size: 0;
-  transition: opacity 0.2s ease-in-out;
-
-  &.active {
-    opacity: 1;
-  }
-
-  &:focus {
-    outline: 0;
-    background-color: $highlight-text-color;
-  }
-}
-
-.media-modal__close {
-  position: absolute;
-  inset-inline-end: 8px;
-  top: 8px;
-  z-index: 100;
-
-  // Polyam: Fix icon size in media modal -- kept them large
-  .icon {
-    width: 40px;
-    height: 40px;
-  }
-}
-
 .detailed,
 .fullscreen {
   .video-player__volume__current,
@@ -412,7 +212,7 @@
   box-sizing: border-box;
   position: relative;
   background: darken($ui-base-color, 8%);
-  border-radius: 4px;
+  border-radius: 8px;
   padding-bottom: 44px;
   width: 100%;
 
@@ -479,7 +279,7 @@
   position: relative;
   background: $base-shadow-color;
   max-width: 100%;
-  border-radius: 4px;
+  border-radius: 8px;
   box-sizing: border-box;
   color: $white;
   display: flex;
@@ -568,7 +368,7 @@
     height: 100%;
     z-index: 4;
     border: 0;
-    background: $base-shadow-color;
+    background: $base-overlay-background;
     color: $darker-text-color;
     transition: none;
     pointer-events: none;
@@ -605,6 +405,7 @@
     .video-player__download__icon {
       color: inherit;
 
+      // Polyam: Fix for wrong icon color
       .icon,
       &:active .icon,
       &:hover .icon,
@@ -643,6 +444,7 @@
       }
     }
 
+    // Polyam: Alt button
     .alt-button {
       font-size: 14px;
     }
