--- a/app/javascript/flavours/polyam/styles/components/modal.scss
+++ b/app/javascript/flavours/polyam/styles/components/modal.scss
@@ -40,6 +40,206 @@
   display: flex;
 }
 
+.video-modal__container {
+  max-width: 100vw;
+  max-height: 100vh;
+}
+
+.audio-modal__container {
+  width: 50vw;
+}
+
+.media-modal {
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+  &__close,
+  &__zoom-button {
+    color: rgba($white, 0.7);
+
+    &:hover,
+    &:focus,
+    &:active {
+      color: $white;
+      background-color: rgba($white, 0.15);
+    }
+
+    &:focus {
+      background-color: rgba($white, 0.3);
+    }
+  }
+}
+
+.media-modal__closer {
+  position: absolute;
+  top: 0;
+  inset-inline-start: 0;
+  inset-inline-end: 0;
+  bottom: 0;
+}
+
+.media-modal__navigation {
+  position: absolute;
+  top: 0;
+  inset-inline-start: 0;
+  inset-inline-end: 0;
+  bottom: 0;
+  pointer-events: none;
+  transition: opacity 0.3s linear;
+  will-change: opacity;
+
+  * {
+    pointer-events: auto;
+  }
+
+  &.media-modal__navigation--hidden {
+    opacity: 0;
+
+    * {
+      pointer-events: none;
+    }
+  }
+}
+
+.media-modal__nav {
+  background: transparent;
+  box-sizing: border-box;
+  border: 0;
+  color: rgba($white, 0.7);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  height: 20vmax;
+  margin: auto 0;
+  padding: 30px 15px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: $white;
+  }
+}
+
+.media-modal__nav--left {
+  inset-inline-start: 0;
+}
+
+.media-modal__nav--right {
+  inset-inline-end: 0;
+}
+
+.media-modal__overlay {
+  max-width: 600px;
+  position: absolute;
+  inset-inline-start: 0;
+  inset-inline-end: 0;
+  bottom: 0;
+  margin: 0 auto;
+
+  .picture-in-picture__footer {
+    border-radius: 0;
+    background: transparent;
+    padding: 20px 0;
+
+    .icon-button {
+      color: $white;
+
+      &:hover,
+      &:focus,
+      &:active {
+        color: $white;
+        background-color: rgba($white, 0.15);
+      }
+
+      &:focus {
+        background-color: rgba($white, 0.3);
+      }
+
+      &.active {
+        color: $highlight-text-color;
+
+        &:hover,
+        &:focus,
+        &:active {
+          background: rgba($highlight-text-color, 0.15);
+        }
+
+        &:focus {
+          background: rgba($highlight-text-color, 0.3);
+        }
+      }
+
+      &.star-icon.active {
+        color: $gold-star;
+
+        &:hover,
+        &:focus,
+        &:active {
+          background: rgba($gold-star, 0.15);
+        }
+
+        &:focus {
+          background: rgba($gold-star, 0.3);
+        }
+      }
+
+      &.disabled {
+        color: $white;
+        background-color: transparent;
+        cursor: default;
+        opacity: 0.4;
+      }
+    }
+  }
+}
+
+.media-modal__pagination {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.media-modal__page-dot {
+  flex: 0 0 auto;
+  background-color: $white;
+  opacity: 0.4;
+  height: 6px;
+  width: 6px;
+  border-radius: 50%;
+  margin: 0 4px;
+  padding: 0;
+  border: 0;
+  font-size: 0;
+  transition: opacity 0.2s ease-in-out;
+
+  &.active {
+    opacity: 1;
+  }
+
+  &:focus {
+    outline: 0;
+    background-color: $highlight-text-color;
+  }
+}
+
+.media-modal__close {
+  position: absolute;
+  inset-inline-end: 8px;
+  top: 8px;
+  z-index: 100;
+
+  // Polyam: Fix icon size in media modal -- kept them large
+  .icon {
+    width: 40px;
+    height: 40px;
+  }
+}
+
 .media-modal__zoom-button {
   position: absolute;
   inset-inline-end: 64px;
@@ -73,6 +273,7 @@
   flex-direction: column;
 }
 
+// Dead style?
 .onboarding-modal__pager {
   height: 80vh;
   width: 80vw;
@@ -123,6 +324,7 @@
   text-align: center;
 }
 
+// Probably also dead style?
 @media screen and (width <= 550px) {
   .onboarding-modal {
     width: 100%;
@@ -187,6 +389,7 @@
   justify-content: center;
 }
 
+// Likely dead
 .onboarding-modal__dots {
   flex: 1 1 auto;
   display: flex;
@@ -304,7 +507,7 @@
     padding-inline-start: 185px;
     text-align: center;
   }
-}
+} // End dead
 
 .display-case {
   text-align: center;
@@ -328,6 +531,7 @@
   }
 }
 
+// More dead?
 .onboarding-modal__page-two,
 .onboarding-modal__page-three,
 .onboarding-modal__page-four,
@@ -414,6 +618,8 @@
   }
 }
 
+// End dead
+
 .onboard-sliders {
   display: inline-block;
   max-width: 30px;
@@ -488,6 +694,7 @@
 .block-modal__action-bar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background: $ui-secondary-color;
   padding: 10px;
   line-height: 36px;
@@ -784,6 +991,11 @@
     color: $highlight-text-color;
   }
 
+  .status__content,
+  .status__content p {
+    color: $inverted-text-color;
+  }
+
   @media screen and (width <= 480px) {
     max-height: 10vh;
   }
@@ -813,6 +1025,14 @@
     font-size: 14px;
     line-height: 20px;
     margin-bottom: 20px;
+  }
+
+  .setting-text-label {
+    display: block;
+    color: $inverted-text-color;
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 10px;
   }
 
   .setting-text {
@@ -868,14 +1088,6 @@
     }
   }
 
-  .setting-text-label {
-    display: block;
-    color: $inverted-text-color;
-    font-size: 14px;
-    font-weight: 500;
-    margin-bottom: 10px;
-  }
-
   .setting-toggle {
     margin-top: 20px;
     margin-bottom: 24px;
@@ -898,19 +1110,14 @@
 }
 
 .actions-modal {
+  max-height: 80vh;
+  max-width: 80vw;
+
   // Polyam: Kept from upstream as otherwise the dropdown modal in mobile layout is unusable with long toots
   .status {
     overflow-y: auto;
     max-height: 300px;
   }
-
-  strong {
-    display: block;
-    font-weight: 500;
-  }
-
-  max-height: 80vh;
-  max-width: 80vw;
 
   .actions-modal__item-label {
     font-weight: 500;
@@ -1140,7 +1347,7 @@
       width: 100%;
       border: 0;
       padding: 10px;
-      font-family: mastodon-font-monospace, monospace;
+      font-family: $font-monospace, monospace;
       background: $ui-base-color;
       color: $primary-text-color;
       font-size: 14px;
