--- a/app/javascript/flavours/polyam/styles/components/search.scss
+++ b/app/javascript/flavours/polyam/styles/components/search.scss
@@ -148,7 +148,7 @@
     display: inline-block;
     opacity: 0;
     transition: all 100ms linear;
-    transition-property: color, transform, opacity;
+    transition-property: transform, opacity;
     width: 21px;
     height: 21px;
     color: $secondary-text-color;
@@ -162,11 +162,11 @@
   }
 
   .icon-search {
-    transform: rotate(0deg);
+    transform: rotate(90deg);
 
     &.active {
-      pointer-events: auto;
-      opacity: 0.3;
+      pointer-events: none;
+      transform: rotate(0deg);
     }
   }
 
@@ -196,6 +196,78 @@
   display: flex;
   align-items: center;
   gap: 5px;
+}
+
+.search-results__section {
+  border-bottom: 1px solid lighten($ui-base-color, 8%);
+
+  &:last-child {
+    border-bottom: 0;
+  }
+
+  &__header {
+    background: darken($ui-base-color, 4%);
+    border-bottom: 1px solid lighten($ui-base-color, 8%);
+    padding: 15px;
+    font-weight: 500;
+    font-size: 14px;
+    color: $darker-text-color;
+    display: flex;
+    justify-content: space-between;
+
+    h3 {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+
+    button {
+      color: $highlight-text-color;
+      padding: 0;
+      border: 0;
+      background: 0;
+      font: inherit;
+
+      &:hover,
+      &:active,
+      &:focus {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  .account:last-child,
+  & > div:last-child .status {
+    border-bottom: 0;
+  }
+
+  & > .hashtag {
+    display: block;
+    padding: 10px;
+    color: $secondary-text-color;
+    text-decoration: none;
+
+    &:hover,
+    &:active,
+    &:focus {
+      color: lighten($secondary-text-color, 4%);
+      text-decoration: underline;
+    }
+  }
+}
+
+.search-results__hashtag {
+  display: block;
+  padding: 10px;
+  color: $secondary-text-color;
+  text-decoration: none;
+
+  &:hover,
+  &:active,
+  &:focus {
+    color: lighten($secondary-text-color, 4%);
+    text-decoration: underline;
+  }
 }
 
 .search-results__info {
