Reduce further differences with glitch-soc style
Reorders classes to match upstream order, removes dead style, match upstream classes and add comments where needed.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/about.scss
+++ b/app/javascript/flavours/polyam/styles/components/about.scss
@@ -280,6 +280,7 @@
         margin-bottom: 4px;
       }
 
+      // Polyam: Removed white-space: nowrap because not readable otherwise
       h6 {
         color: $secondary-text-color;
         font-size: inherit;
@@ -287,6 +288,7 @@
         text-overflow: ellipsis;
       }
 
+      // Polyam: Removed white-space: nowrap because not readable otherwise
       p {
         overflow: hidden;
         text-overflow: ellipsis;
