--- a/app/javascript/flavours/polyam/styles/components/compose_form.scss
+++ b/app/javascript/flavours/polyam/styles/components/compose_form.scss
@@ -521,10 +521,10 @@
 }
 
 .upload-progress {
-  display: flex;
   padding: 10px;
-  color: $darker-text-color;
+  color: $lighter-text-color;
   overflow: hidden;
+  display: flex;
   gap: 10px;
 
   .icon {
@@ -533,10 +533,10 @@
   }
 
   span {
-    display: block;
     font-size: 12px;
-    font-weight: 500;
     text-transform: uppercase;
+    font-weight: 500;
+    display: block;
   }
 }
 
@@ -545,57 +545,51 @@
 }
 
 .upload-progress__backdrop {
-  position: relative;
-  margin-top: 5px;
-  border-radius: 6px;
   width: 100%;
   height: 6px;
+  border-radius: 6px;
   background: darken($simple-background-color, 8%);
+  position: relative;
+  margin-top: 5px;
 }
 
 .upload-progress__tracker {
   position: absolute;
-  top: 0;
   inset-inline-start: 0;
+  top: 0;
   height: 6px;
-  border-radius: 6px;
   background: $ui-highlight-color;
+  border-radius: 6px;
 }
 
 .privacy-dropdown__dropdown {
-  border-radius: 4px;
-  box-shadow: var(--dropdown-shadow);
   background: $simple-background-color;
+  box-shadow: var(--dropdown-shadow);
+  border-radius: 4px;
   overflow: hidden;
-  transform-origin: 50% 0;
+  z-index: 2;
+
+  &.top {
+    transform-origin: 50% 100%;
+  }
+
+  &.bottom {
+    transform-origin: 50% 0;
+  }
 }
 
 .privacy-dropdown__option {
-  display: flex;
-  align-items: center;
-  padding: 10px;
   color: $inverted-text-color;
+  padding: 10px;
+  align-items: center;
   cursor: pointer;
-
-  .privacy-dropdown__option__content {
-    flex: 1 1 auto;
-    color: $lighter-text-color;
-
-    &:not(:first-child) {
-      margin-inline-start: 10px;
-    }
-
-    strong {
-      display: block;
-      color: $inverted-text-color;
-      font-weight: 500;
-    }
-  }
+  display: flex;
 
   &:hover,
   &.active {
     background: $ui-highlight-color;
     color: $primary-text-color;
+    outline: 0;
 
     .privacy-dropdown__option__content {
       color: $primary-text-color;
@@ -608,6 +602,28 @@
 
   &.active:hover {
     background: lighten($ui-highlight-color, 4%);
+  }
+}
+
+.privacy-dropdown__option__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-inline-end: 10px;
+}
+
+.privacy-dropdown__option__content {
+  flex: 1 1 auto;
+  color: $lighter-text-color;
+
+  &:not(:first-child) {
+    margin-inline-start: 10px;
+  }
+
+  strong {
+    font-weight: 500;
+    display: block;
+    color: $inverted-text-color;
   }
 }
 
