--- a/app/javascript/flavours/polyam/styles/components/explore.scss
+++ b/app/javascript/flavours/polyam/styles/components/explore.scss
@@ -1,7 +1,3 @@
-.account-card__header {
-  position: relative;
-}
-
 .explore__search-header {
   background: darken($ui-base-color, 4%);
   justify-content: center;
@@ -16,6 +12,7 @@
   .search__input {
     border: 1px solid lighten($ui-base-color, 8%);
     padding: 10px;
+    padding-inline-end: 28px;
   }
 
   .search__popout {
@@ -95,7 +92,7 @@
     flex: 0 0 auto;
     position: relative;
     width: 120px;
-    aspect-ratio: 1;
+    height: 120px;
 
     .skeleton {
       width: 100%;
